# chess-in-rust

./: .gitignore  .travis.yml  BENCH.md  BENCH_CMP.md  BENCH_PERFT.md  BENCH_SEARCH.md  CHANGES.md  Cargo.toml  ELO_LOG.md  Makefile  README.md  mates.html
games/: lichess_pgn_2020.09.19_wojtek_bot_vs_kimagure.FOYmHGky.pgn  lichess_pgn_2020.09.22_lichess_AI_level_3_vs_wojtek_bot.1yHADDeW.pgn
src/: board.rs  lib.rs  main.rs  parser.rs
src/move_search/: endgame.rs  eval.rs  mod.rs  search.rs
src/position/: basic_types.rs  board.rs  make_move.rs  mod.rs  move_gen.rs  parser.rs  perft.rs
src/position2/: board.rs  make_move.rs  mod.rs  move_gen.rs
tests/: test_checkmate.rs  test_eval.rs  test_intmove.rs  test_make_move.rs  test_moves.rs  test_perf.rs  test_stalemate.rs  test_unmake_move.rs
