[package]
name = "rust-chess"
version = "0.1.0"
authors = ["wjzz <wjedynak@gmail.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html
[profile.release]
# debug = true

# lto = "fat"
# codegen-units = 1
# panic = "abort"
# -C target-cpu=native